contrast fix

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -68,6 +68,7 @@ form {
       font-size: 1.3rem;
       color: $white;
       font-family: $secondaryFont;
+      opacity: 1;
     }
     &:focus {
       border-bottom: 2px solid white;
@@ -85,6 +86,9 @@ form {
     font-size: 1.3rem;
     height: 220px;
     margin-bottom: 100px;
+    &::placeholder {
+      opacity: 1;
+    }
     &:focus {
       border-bottom: 2px solid white;
     }
@@ -127,7 +131,7 @@ input[name="phone"] {
     padding: 0 20px;
     font-size: 1.5rem;
     a {
-      color: $grey;
+      color: $white;
       transition: 0.6s;
       &:focus,
       &:hover {
