--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -39,6 +39,7 @@
       font-size: 3rem;
       padding-bottom: 20px;
       transition: 0.2s;
+      width: 100%;
       &:hover {
         transform: scale(1.5);
       }
