--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,6 +434,7 @@ header p {
   padding-bottom: 20px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  width: 100%;
 }
 .skills .skillsLayout .skillIcon:hover {
   -webkit-transform: scale(1.5);
@@ -637,30 +638,35 @@ form input::-webkit-input-placeholder {
   font-size: 1.3rem;
   color: #f8f8f6;
   font-family: "Montserrat", sans-serif;
+  opacity: 1;
 }
 form input::-moz-placeholder {
   letter-spacing: 1.2px;
   font-size: 1.3rem;
   color: #f8f8f6;
   font-family: "Montserrat", sans-serif;
+  opacity: 1;
 }
 form input:-ms-input-placeholder {
   letter-spacing: 1.2px;
   font-size: 1.3rem;
   color: #f8f8f6;
   font-family: "Montserrat", sans-serif;
+  opacity: 1;
 }
 form input::-ms-input-placeholder {
   letter-spacing: 1.2px;
   font-size: 1.3rem;
   color: #f8f8f6;
   font-family: "Montserrat", sans-serif;
+  opacity: 1;
 }
 form input::placeholder {
   letter-spacing: 1.2px;
   font-size: 1.3rem;
   color: #f8f8f6;
   font-family: "Montserrat", sans-serif;
+  opacity: 1;
 }
 form input:focus {
   border-bottom: 2px solid white;
@@ -678,6 +684,21 @@ form textarea {
   font-size: 1.3rem;
   height: 220px;
   margin-bottom: 100px;
+}
+form textarea::-webkit-input-placeholder {
+  opacity: 1;
+}
+form textarea::-moz-placeholder {
+  opacity: 1;
+}
+form textarea:-ms-input-placeholder {
+  opacity: 1;
+}
+form textarea::-ms-input-placeholder {
+  opacity: 1;
+}
+form textarea::placeholder {
+  opacity: 1;
 }
 form textarea:focus {
   border-bottom: 2px solid white;
@@ -726,7 +747,7 @@ input[name=phone] {
   font-size: 1.5rem;
 }
 .socials li a {
-  color: #7e7e7e;
+  color: #f8f8f6;
   -webkit-transition: 0.6s;
   transition: 0.6s;
 }
